# reflection_json

./: CMakeLists.txt  README.md  json_reflection_server.cpp  requirements.txt  sample.json
client/: client.py  json_reflection_pb2.py  json_reflection_pb2_grpc.py
proto/: generate.sh  json_reflection.grpc.pb.cc  json_reflection.grpc.pb.h  json_reflection.pb.cc  json_reflection.pb.h  json_reflection.proto
